# design-patterns/facade/shipping/docs/swagger.json
@@ -47,7 +47,7 @@
                 }
             },
             "post": {
-                "description": "Create addresses",
+                "description": "create addresses",
                 "consumes": [
                     "application/json"
                 ],
@@ -139,7 +139,7 @@
         },
         "/login": {
             "post": {
-                "description": "Sign in a user",
+                "description": "sign in a user",
                 "consumes": [
                     "application/json"
                 ],
@@ -179,7 +179,7 @@
         },
         "/packagings": {
             "post": {
-                "description": "Create packagings",
+                "description": "create packagings",
                 "consumes": [
                     "application/json"
                 ],
@@ -226,7 +226,7 @@
         },
         "/parcels": {
             "post": {
-                "description": "Create parcels",
+                "description": "create parcels",
                 "consumes": [
                     "application/json"
                 ],
@@ -273,7 +273,7 @@
         },
         "/pickups": {
             "get": {
-                "description": "Get carrier pickups",
+                "description": "get carrier pickups",
                 "consumes": [
                     "application/json"
                 ],
@@ -309,7 +309,7 @@
                 }
             },
             "put": {
-                "description": "Update a pickup",
+                "description": "update a pickup",
                 "consumes": [
                     "application/json"
                 ],
@@ -356,7 +356,7 @@
         },
         "/rates": {
             "get": {
-                "description": "Get parcel rates",
+                "description": "get rates",
                 "consumes": [
                     "application/json"
                 ],
@@ -364,15 +364,58 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Parcel"
+                    "Rates"
                 ],
-                "summary": "Get parcel rates",
+                "summary": "Get rates",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer token",
+                        "description": "Bearer Token",
                         "name": "Authorization",
                         "in": "header",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            "NGN",
+                            "USD"
+                        ],
+                        "type": "string",
+                        "description": "Currency",
+                        "name": "currency",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Pickup Address ID",
+                        "name": "pickup_address_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Delivery Address ID",
+                        "name": "delivery_address_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Parcel ID",
+                        "name": "parcel_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            "false",
+                            "true"
+                        ],
+                        "type": "string",
+                        "description": "Cash On Delivery",
+                        "name": "cash_on_delivery",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -383,8 +426,8 @@
                             "$ref": "#/definitions/domain.Response"
                         }
                     },
-                    "409": {
-                        "description": "Conflict",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/domain.Response"
                         }
@@ -394,7 +437,7 @@
         },
         "/register": {
             "post": {
-                "description": "Register a new user",
+                "description": "register a new user",
                 "consumes": [
                     "application/json"
                 ],
@@ -474,7 +517,7 @@
         },
         "/shipments": {
             "get": {
-                "description": "Get parcel rates",
+                "description": "get shipments",
                 "consumes": [
                     "application/json"
                 ],
@@ -510,7 +553,7 @@
                 }
             },
             "post": {
-                "description": "Create a shipment",
+                "description": "create a shipment",
                 "consumes": [
                     "application/json"
                 ],
