# design-patterns/facade/shipping/internal/adapters/routes/private_routes.go
@@ -14,6 +14,7 @@ func PrivateRoutesAdaptor(private *echo.Group, handler *handlers.HTTPHandler) *e
 	private.GET("/addresses/:addressID", handler.GetAddress)
 	private.POST("/packagings", handler.PostPackaging)
 	private.POST("/parcels", handler.PostParcel)
+	private.GET("/rates", handler.Rates)
 
 	private.GET("", handler.Restricted)
 	return private
